--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Aladin&family=Comic+Neue:wght@400;700&family=Lato:wght@300;400;700&family=Satisfy&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Nunito:wght@400;600;700&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -20,7 +22,23 @@ code {
   height: 100vh;
 }
 h2 {
-  font-family: "lato";
+  font-family: "Nunito";
+}
+.icon-delete {
+  color: rgb(190, 190, 190);
+  font-size: 1.1rem;
+  padding: 0rem 2rem;
+}
+.icon-delete:hover {
+  color: rgb(221, 99, 99);
+}
+.icon-edit {
+  color: rgb(57, 125, 204);
+  padding-right: 2rem;
+  font-size: 1.1rem;
+}
+.icon-edit:hover {
+  color: rgb(43, 94, 151);
 }
 .navbar {
   height: 4rem;
@@ -28,6 +46,11 @@ h2 {
   background-color: rgb(45, 19, 116);
   display: flex;
   justify-content: space-between;
+}
+.navbar span {
+  color: rgb(189, 189, 189);
+  margin-right: 0.8rem;
+  font-size: 2.6rem;
 }
 .navbar-logo {
   color: rgb(19, 197, 129);
@@ -113,11 +136,9 @@ form {
   background-color: rgb(73, 42, 158);
 }
 /* =========== LIST ===== */
-.thead-light {
-  width: 80%;
-}
+/*  */
 .table {
-  width: 80%;
+  width: 100%;
 }
 tbody {
   padding: 1rem;
@@ -130,9 +151,8 @@ thead {
   padding: 1rem;
 }
 td {
-  padding: 0.3rem 0rem;
+  padding: 0.2rem 0rem;
   padding-right: 1rem;
-
   outline: none;
 }
 /*-- footer -*/
