--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ h2 {
 .navbar {
   height: 4rem;
   width: 100vw;
-  background-color: rgb(45, 19, 116);
+  background-color: #3e0064;
   position: fixed;
   top: 0;
 }
@@ -60,7 +60,7 @@ h2 {
   display: none;
 }
 .navbar span {
-  color: rgb(189, 189, 189);
+  color: rgb(231, 217, 88);
   margin: 0.8rem;
   font-size: 2.8rem;
   padding-top: 0.3rem;
@@ -275,5 +275,29 @@ th {
     border-radius: 0.3rem;
     border: none;
     font-weight: 700;
+  }
+}
+@media all and (max-width: 451px) {
+  tbody {
+    padding: 0;
+  }
+  thead {
+    margin: 0;
+  }
+  .table-head {
+    margin: 0;
+  }
+  td {
+    padding: 0.8rem 0;
+    font-size: 0.8rem;
+  }
+  tr {
+    margin: 0;
+    padding: 0;
+  }
+  th {
+    padding: 0rem;
+    font-size: 0.8rem;
+    padding-right: 0.6rem;
   }
 }
